[package]
name = "backup"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.22.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
chrono = "0.4.37"
zip = "0.6"
rand = "0.8.5"
